--- a/Free-Client/Packages/manifest.json
+++ b/Free-Client/Packages/manifest.json
@@ -1,12 +1,9 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "2.0.5",
-    "com.unity.feature.development": "1.0.1",
+    "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.7.5",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.8.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
