--- a/Free-Server/pom.xml
+++ b/Free-Server/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>ezydata-mongodb</artifactId>
             <version>${ezy.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
