--- a/Free-Server/pom.xml
+++ b/Free-Server/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>javax.mail</artifactId>
             <version>1.6.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.32</version> <!-- oder die neueste Version -->
+        </dependency>
     </dependencies>
     <profiles>
         <profile>
