--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 Free-Server/.idea/uiDesigner.xml
 Free-Server/free-server-common/src/main/resources/free-server-common-config.properties
+Free-Game-Server/free-game-server-common/src/main/resources/free-game-server-common-config.properties
+Free-Account-Server/free-account-server-common/src/main/resources/free-account-server-common-config.properties
