--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-Free-Server/.idea/uiDesigner.xml
-Free-Server/free-server-common/src/main/resources/free-server-common-config.properties
-Free-Game-Server/free-game-server-common/src/main/resources/free-game-server-common-config.properties
+Free-Account-Server/.idea/uiDesigner.xml
 Free-Account-Server/free-account-server-common/src/main/resources/free-account-server-common-config.properties
