--- a/Free-Game-Server/free-game-server-app-api/pom.xml
+++ b/Free-Game-Server/free-game-server-app-api/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.assambra.account</groupId>
+        <groupId>com.assambra.game</groupId>
         <artifactId>free-game-server</artifactId>
         <version>0.13.0</version>
     </parent>
@@ -16,7 +16,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.assambra.account</groupId>
+            <groupId>com.assambra.game</groupId>
             <artifactId>free-game-server-common</artifactId>
             <version>${project.version}</version>
         </dependency>
