--- a/Free-Game-Server/free-game-server-common/pom.xml
+++ b/Free-Game-Server/free-game-server-common/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.assambra.account</groupId>
+        <groupId>com.assambra.game</groupId>
         <artifactId>free-game-server</artifactId>
         <version>0.13.0</version>
     </parent>
