--- a/Free-Game-Server/free-game-server-startup/pom.xml
+++ b/Free-Game-Server/free-game-server-startup/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.assambra.account</groupId>
+        <groupId>com.assambra.game</groupId>
         <artifactId>free-game-server</artifactId>
         <version>0.13.0</version>
     </parent>
@@ -15,17 +15,17 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.assambra.account</groupId>
+            <groupId>com.assambra.game</groupId>
             <artifactId>free-game-server-app-api</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.assambra.account</groupId>
+            <groupId>com.assambra.game</groupId>
             <artifactId>free-game-server-app-entry</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.assambra.account</groupId>
+            <groupId>com.assambra.game</groupId>
             <artifactId>free-game-server-plugin</artifactId>
             <version>${project.version}</version>
         </dependency>
