--- a/Free-Client/Packages/manifest.json
+++ b/Free-Client/Packages/manifest.json
@@ -37,6 +37,17 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0"
-  }
+    "com.unity.modules.xr": "1.0.0",
+    "com.judahperez.hsvcolorpicker": "3.3.0"
+  },
+  "scopedRegistries": [
+    {
+      "name": "package.openupm.com",
+      "url": "https://package.openupm.com",
+      "scopes": [
+        "com.judahperez.hsvcolorpicker",
+        "com.openupm"
+      ]
+    }
+  ]
 }
