Server Authoriative movement only, no client side prediction, server reconciliation or entity interpolation, simple send input compute position on the server send back to client

--- a/Free-Game-Server/free-game-server-app-api/pom.xml
+++ b/Free-Game-Server/free-game-server-app-api/pom.xml
@@ -20,5 +20,10 @@
             <artifactId>free-game-server-common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6.1</version>
+        </dependency>
     </dependencies>
 </project>
