--- a/Free-Account-Server/pom.xml
+++ b/Free-Account-Server/pom.xml
@@ -23,6 +23,7 @@
         <directory.entries>entries</directory.entries>
         <directory.common>common</directory.common>
         <ezy.version>1.2.8</ezy.version>
+        <ezy.server.version>1.2.8.1</ezy.server.version>
         <ezy.boot.version>1.1.0</ezy.boot.version>
         <ezy.client.version>1.2.5</ezy.client.version>
     </properties>
@@ -31,7 +32,7 @@
         <dependency>
             <groupId>com.tvd12</groupId>
             <artifactId>ezyfox-server-core</artifactId>
-            <version>${ezy.version}</version>
+            <version>${ezy.server.version}</version>
         </dependency>
         <dependency>
             <groupId>com.tvd12</groupId>
