--- a/Free-Game-Server/pom.xml
+++ b/Free-Game-Server/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.tvd12</groupId>
         <artifactId>ezyfox</artifactId>
-        <version>1.0.5</version>
+        <version>1.0.6</version>
     </parent>
 
     <groupId>com.assambra.game</groupId>
@@ -22,16 +22,17 @@
         <directory.apps>apps</directory.apps>
         <directory.entries>entries</directory.entries>
         <directory.common>common</directory.common>
-        <ezy.version>1.2.7</ezy.version>
-        <ezy.boot.version>1.0.9</ezy.boot.version>
-        <ezy.client.version>1.2.4</ezy.client.version>
+        <ezy.version>1.2.8</ezy.version>
+        <ezy.server.version>1.2.8.1</ezy.server.version>
+        <ezy.boot.version>1.1.0</ezy.boot.version>
+        <ezy.client.version>1.2.5</ezy.client.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.tvd12</groupId>
             <artifactId>ezyfox-server-core</artifactId>
-            <version>${ezy.version}</version>
+            <version>${ezy.server.version}</version>
         </dependency>
         <dependency>
             <groupId>com.tvd12</groupId>
@@ -46,7 +47,7 @@
         <dependency>
             <groupId>com.tvd12</groupId>
             <artifactId>game-box</artifactId>
-            <version>1.2.1</version>
+            <version>1.2.2</version>
         </dependency>
     </dependencies>
 
