--- a/Free-Game-Server/free-game-server-common/pom.xml
+++ b/Free-Game-Server/free-game-server-common/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>com.tvd12</groupId>
             <artifactId>ezyfox-server-support</artifactId>
-            <version>${ezy.version}</version>
+            <version>${ezy.server.version}</version>
         </dependency>
         <dependency>
             <groupId>com.tvd12</groupId>
