--- a/Free-Client/Packages/manifest.json
+++ b/Free-Client/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.judahperez.hsvcolorpicker": "3.3.0",
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.burst": "1.8.12",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.postprocessing": "3.4.0",
