--- a/Free-Client/Packages/manifest.json
+++ b/Free-Client/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.postprocessing": "3.4.0",
     "com.unity.textmeshpro": "3.0.8",
     "com.unity.timeline": "1.7.6",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
