--- a/Free-Client/Packages/manifest.json
+++ b/Free-Client/Packages/manifest.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
+    "com.bytework.ezyfox.sharp.client": "file:../../../Master-Server-Unity/Unity-Server/Packages/com.bytework.ezyfox.sharp.client",
     "com.judahperez.hsvcolorpicker": "3.3.0",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.burst": "1.8.12",
+    "com.unity.burst": "1.8.18",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
     "com.unity.postprocessing": "3.4.0",
