--- a/Free-Server/.gitignore
+++ b/Free-Server/.gitignore
@@ -74,7 +74,7 @@ crashlytics-build.properties
 /Assets/TextMesh Pro
 
 # EzyFox Server CSharp Client Unity Client SDK
-/Assets/Free-Server/EzyFox Server - C-Sharp Client - Unity/*
+/Assets/ezyfox-server-csharp-client-1.1.6-unity/*
 
 #MapMagic 2
 /Assets/MapMagic
