.gitignore we ignore now the deploy folder from both projects

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 Free-Account-Server/.idea/uiDesigner.xml
 Free-Game-Server/.idea/uiDesigner.xml
+Free-Account-Server/free-account-server-startup/deploy/
+Free-Game-Server/free-game-server-startup/deploy/
+
