--- a/master-server/master-server-common/pom.xml
+++ b/master-server/master-server-common/pom.xml
@@ -23,6 +23,21 @@
             <artifactId>ezyfox-boot-autoconfigure</artifactId>
             <version>${ezy.boot.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.tvd12</groupId>
+            <artifactId>ezydata-mongodb</artifactId>
+            <version>${ezy.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.32</version>
+        </dependency>
     </dependencies>
 
 </project>
