Database and mail settings

--- a/master-server/master-server-common/src/main/resources/master-server-common-config.properties
+++ b/master-server/master-server-common/src/main/resources/master-server-common-config.properties
@@ -1,1 +1,24 @@
 hello=world
+
+database.mongo.uri=mongodb://root:123456@127.0.0.1:27017/free
+database.mongo.database=free
+database.mongo.collection.naming.case=UNDERSCORE
+database.mongo.collection.naming.ignored_suffix=Entity
+
+mail.host=mail.example.com
+mail.port.tls=587
+mail.port.ssl=465
+mail.authentication=true
+mail.username=account@example.com
+mail.password=123456
+mail.tls=true
+mail.ssl=false
+mail.mail.address=account@example.com
+mail.mail.sender.name=YourCompany Account Management
+mail.use.replay.address=false;
+mail.mail.replay.address=account@example.com
+mail.charset=UTF-8
+mail.content.type.primary=text/HTML
+mail.content.type.sub=charset=UTF-8
+mail.format=flowed
+mail.content.transfer.encoding=8bit
