All Requests, Service Controller files. Renaming files and variables account -> user. We can now read server.can_send_mail from the properties file where the other properties lives new class ServerConfig;

--- a/master-server/master-server-common/src/main/resources/master-server-common-config.properties
+++ b/master-server/master-server-common/src/main/resources/master-server-common-config.properties
@@ -5,6 +5,8 @@ database.mongo.database=free
 database.mongo.collection.naming.case=UNDERSCORE
 database.mongo.collection.naming.ignored_suffix=Entity
 
+server.can_send_mail=false
+
 mail.host=mail.example.com
 mail.port.tls=587
 mail.port.ssl=465
