--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ Free-Account-Server/.idea/uiDesigner.xml
 Free-Game-Server/.idea/uiDesigner.xml
 Free-Account-Server/free-account-server-startup/deploy/lib
 Free-Game-Server/free-game-server-startup/deploy/lib
+master-server/free-master-server-startup/deploy/lib
 
