--- a/master-server/master-server-common/pom.xml
+++ b/master-server/master-server-common/pom.xml
@@ -29,6 +29,11 @@
             <version>${ezy.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.tvd12</groupId>
+            <artifactId>game-box</artifactId>
+            <version>1.2.4</version>
+        </dependency>
+        <dependency>
             <groupId>com.sun.mail</groupId>
             <artifactId>javax.mail</artifactId>
             <version>1.6.2</version>
