Moved ServerConfig to common. UnityServer use now master-server-common-config.properties to get the path, removed now unneded code.

--- a/master-server/master-server-common/src/main/resources/master-server-common-config.properties
+++ b/master-server/master-server-common/src/main/resources/master-server-common-config.properties
@@ -6,6 +6,7 @@ database.mongo.collection.naming.case=UNDERSCORE
 database.mongo.collection.naming.ignored_suffix=Entity
 
 server.can_send_mail=false
+server.server_executable_path=D:/Game Builds/Free-Server/Free-Server.exe
 
 mail.host=mail.example.com
 mail.port.tls=587
